--- a/Web/Manage/View/CMBC/index.html
+++ b/Web/Manage/View/CMBC/index.html
@@ -81,7 +81,7 @@
                     	  <a href="{:U('CMBC/VerifyStore')}?id={$vo.id}" class="popup-store-submit btn btn-primary">审核入驻</a>
                           <a href="{:U('CMBC/ModStore')}?id={$vo.id}" data-toggle="tooltip" title="资料修改" class="btn btn-warning btn_store_edit">资料修改</a>
                           <a href="{:U('CMBC/BindPayment')}?id={$vo.id}" class="btn btn-success">绑定支付</a>
-                          <a href="{:U('CMBC/BindPayment')}?id={$vo.id}" class="btn btn-info">修改支付</a>
+                          <a href="{:U('CMBC/ModPayment')}?id={$vo.id}" class="btn btn-info">修改支付</a>
                           <a href="javascript:void(0);" class="btn_store_more btn btn-info">更多</a>
 
 			   </div>
