--- a/Web/Manage/View/CMBC/modstore.html
+++ b/Web/Manage/View/CMBC/modstore.html
@@ -45,7 +45,7 @@
                       <div class="form_item clearfix">
     	                <label class="item-label">城市：    	<i>*</i>    	</label>
                         <div class="controls">
-{:W('Manage/City/three',array(array('province_code','city_code','district_code'),array(I('province_code'),I('city_code'),I('district_code'))));}
+{:W('Manage/City/three',array(array('province_code','city_code','district_code'),array($province_code,$city_code,$district_code)));}
                         </div>
                       </div>
 
