--- a/Web/Manage/View/CMBC/modPayment.html
+++ b/Web/Manage/View/CMBC/modPayment.html
@@ -57,8 +57,8 @@ input{behavior:url(#default#savehistory)};
                         <span>一次只能绑定一个通道，不同通道可分多次绑定</span>
                         <div class="form_item clearfix">
                         <label class="item-label">商户类别：    	<i>*</i>    	</label>
-                           <div class="controls">
-                        <input type="text" id="" name="industryId"  value="{$payment.industryid}" class="textBox" placeholder="" data-required="true" />
+                           <div class="controls" id="industryId">
+                        	<input type="text"  name="industryId"  value="{$payment.industryid}" class="textBox" placeholder="" data-required="true" />
                            </div>
                       </div>
                       <div class="form_item clearfix">
@@ -297,8 +297,44 @@ input{behavior:url(#default#savehistory)};
       alert(data);
       return false;*/
     });
-  });
 
+    function industry() {
+    	var apicode = "<?php echo $payment['apicode']; ?>";
+    	var url ="";
+    	if (apicode == "0005"){
+    		url = "/CMBC/IndustryWX"
+    	}else{
+
+    		if (apicode == "0007"){
+    			url = "/CMBC/IndustryZFB"
+    		}else{
+    			url = "/CMBC/IndustryQQ"
+    		}
+    	}
+    	$.ajax({
+    		url : url,
+    		type : "post",
+    		dataType : "json",
+    		contentType : "application/json",
+    		traditional : true,
+    		data : {
+    			root_code : $("#storetype").val(),
+    			p_code:$("#industry").val(),
+    		},
+    		success : function(data) {
+    			var optionstring = "<option value='请选择'>请选择...</option> ";
+    			$.each(data, function (n, value) {
+    				optionstring = "<option value=\"" + value.storetype + "\" >" + value.storetype + "</option>";
+					$("#industryId").append(optionstring);
+    			});
+    			},
+    			error : function(msg) {
+    				alert("出错了！");
+    				}
+    			});
+    	};
+    	//industry();
+    	});
 </script>
 
 </block>
