--- a/Web/Manage/View/CMBC/register.html
+++ b/Web/Manage/View/CMBC/register.html
@@ -94,7 +94,7 @@
                       <div class="form_item clearfix">
                         <label class="item-label">客服电话：    	<i>*</i>    	</label>
                            <div class="controls">
-                        <input type="text" id="" name="servTel" data-type="phone"  value="" class="textBox" placeholder="" data-required="true" />
+                        <input type="text" id="" name="servTel" data-type="phone"  value="" class="textBox" placeholder="11位数字或者手机号码" data-required="true" />
                            </div>
                       </div>
                       <div class="form_item clearfix">
