--- a/Web/Manage/View/CMBC/bindPayment.html
+++ b/Web/Manage/View/CMBC/bindPayment.html
@@ -106,67 +106,66 @@
                         <input type="text" id="" name="FeeRate"  value="" class="textBox" placeholder="" data-required="true" />
                            </div>
                       </div>
-
-                      <div class="form_item clearfix">
+<div class="form_item clearfix">
                         <label class="item-label">结算账号：    	<i>*</i>    	</label>
                            <div class="controls">
-                        <input type="text" id="" name="account"  value="" class="textBox" placeholder="" data-required="true" />
+                        <input type="text" id="" name="account"  value="{$payment.account}" class="textBox" placeholder="" data-required="true" />
                            </div>
                       </div>
                       <div class="form_item clearfix">
                         <label class="item-label">开户行号：    	<i>*</i>    	</label>
                            <div class="controls">
-                        <input type="text" id="" name="pbcBankId"  data-type="number"  value="" class="textBox" placeholder="人民银行大小额支付行号" data-required="true" />
+                        <input type="text" id="" name="pbcBankId"  data-type="number"  value="{$payment.pbcbankid}" class="textBox" placeholder="人民银行大小额支付行号" data-required="true" />
                            </div>
                       </div>
                       <div class="form_item clearfix">
                         <label class="item-label">开户人：    	<i>*</i>    	</label>
                            <div class="controls">
-                        <input type="text" id="" name="acctName"  data-type="number"  value="" class="textBox" placeholder="" data-required="true" />
+                        <input type="text" id="" name="acctName"  data-type="number"  value="{$payment.acctname}" class="textBox" placeholder="" data-required="true" />
                            </div>
                       </div>
                       <div class="form_item clearfix">
                         <label class="item-label">账户类型：    	<i>*</i>    	</label>
                           <div class="controls">
-                        <select data-required="true" name="acctType">
+                        <select data-required="true" name="acctType" autocomplete="off" >
                             <option value="">--请选择--</option>
-                            <option value="1">对私</option>
-                            <option value="2" >对公</option>
+                            <option value="1" <if condition="$payment.accttype eq '1'">selected = "selected"</if>>对私</option>
+                            <option value="2" <if condition="$payment.accttype eq '2'">selected = "selected"</if>>对公</option>
                         </select>
                           </div>
                       </div>
                       <div class="form_item clearfix">
                         <label class="item-label">Message：</label>
                            <div class="controls">
-                        <input type="text" id="" name="message" data-type="phone"  value="" class="textBox" placeholder="JSON格式字符串" data-required="true" />
+                        <input type="text" id="" name="message" data-type="phone"  value="{$payment.message}" class="textBox" placeholder="JSON格式字符串" data-required="true" />
                            </div>
                       </div>
                       <div class="form_item clearfix">
                         <label class="item-label">开户人证件类型：    	<i>*</i>    	</label>
                          <div class="controls">
-                        <select data-required="true" name="idType">
+                        <select data-required="true" name="idType" autocomplete="off" >
                             <option value="">--请选择--</option>
-                            <option value="01" >身份证</option>
-                            <option value="02" >军官证</option>
-                            <option value="03" >护照</option>
-                            <option value="04" >回乡证</option>
-                            <option value="05" >台胞证</option>
-                            <option value="06" >警官证</option>
-                            <option value="07" >士兵证</option>
-                            <option value="99" >其它证件</option>
+                            <option value="01" <if condition="$payment.idtype eq '01'">selected = "selected"</if>>身份证</option>
+                            <option value="02" <if condition="$payment.idtype eq '02'">selected = "selected"</if>>军官证</option>
+                            <option value="03" <if condition="$payment.idtype eq '03'">selected = "selected"</if>>护照</option>
+                            <option value="04" <if condition="$payment.idtype eq '04'">selected = "selected"</if>>回乡证</option>
+                            <option value="05" <if condition="$payment.idtype eq '05'">selected = "selected"</if>>台胞证</option>
+                            <option value="06" <if condition="$payment.idtype eq '06'">selected = "selected"</if>>警官证</option>
+                            <option value="07" <if condition="$payment.idtype eq '07'">selected = "selected"</if>>士兵证</option>
+                            <option value="99" <if condition="$payment.idtype eq '99'">selected = "selected"</if>>其它证件</option>
                         </select>
                         </div>
                       </div>
                       <div class="form_item clearfix">
                         <label class="item-label">证件号码：</label>
                            <div class="controls">
-                        	<input type="text" id="" name="idCode"  value="" class="textBox" placeholder=""  />
+                        	<input type="text" id="" name="idCode"  value="{$payment.idcode}" class="textBox" placeholder=""  />
                            </div>
                       </div>
                       <div class="form_item clearfix">
                         <label class="item-label">开户人预留手机号：    	<i>*</i>    	</label>
                            <div class="controls">
-                        <input type="text" id="" name="acctTelephone"  data-type="phone"  value="" class="textBox" />
+                        <input type="text" id="" name="acctTelephone"  data-type="phone"  value="{$payment.accttelephone}" class="textBox" />
                            </div>
                       </div>
                     </div>
