--- a/Web/Manage/View/Default/CMBC/index.html
+++ b/Web/Manage/View/Default/CMBC/index.html
@@ -112,15 +112,19 @@
                                 </td>
                               </tr>
                           </foreach>
-
                         </tbody>
                       </table>
                     </div>
-
                 </div>
               </section>
               <footer class="footer bg-white b-t">
-                {$_page}
+              <table class="table table-striped m-b-none">
+              <tbody>
+                <tr>
+							<td>{$page} </td>
+						</tr>
+                        </tbody>
+                      </table>
               </footer>
             </section>
           </section>
